add broker mysql storage cache